Fix structure & spacing

--- a/public/global.css
+++ b/public/global.css
@@ -33,7 +33,8 @@ body {
 main {
     position: relative;
     display: block;
-    width: 60%;
+    width: 70%;
+    max-width: 68rem;
     min-height: 15rem;
     margin: 16rem auto 8rem;
     padding: 5rem 1.2rem 1.5rem;
